@@ -1,4 +1,7 @@
 
+2009-04-06 10:50 Ali aliov@xfce.org 
+	 * : Added inhibit screen saver option in the inhibit plugin
+
 2009-04-06  8:45 Ali aliov@xfce.org 
 	 * : Fix untranslated panel plugins comment
 
